# charm_3d_v2

./: .gitignore  CMakeLists.txt  README.md
contrib/metis-5.1.0/: CMakeLists.txt
src/: Log.cpp  Log.h  Operators.cpp  Operators.h  Parallel.cpp  Parallel.h  charm_00000000.vtk  charm_00001000.vtk  charm_00002000.vtk  charm_00003000.vtk  charm_00004000.vtk  charm_00005000.vtk  charm_00006000.vtk  charm_3d_v2.exe.stackdump  global.cpp  global.h  klin.geo  klin10.msh  main.cpp  task.yaml  task_klin.yaml  task_nummeth2019_3d.yaml  task_prep2016_66.yaml  task_zhrv_3rd.yaml  test.geo  test.msh  test_h_0.025.geo  test_h_0.05.geo  test_h_0.05.msh  test_h_0.1.geo  test_h_0.2.geo  test_h_0.2.msh
src/contrib/yaml-cpp/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
src/contrib/yaml-cpp/util/: CTestTestfile.cmake  Makefile
src/mesh/: Cell.cpp  Cell.h  Face.cpp  Face.h  Mesh.cpp  Mesh.h  MeshException.h  Point.cpp  Point.h
src/mesh/readers/: MeshDecompException.h  MeshReader.cpp  MeshReader.h  MeshReaderException.h  MeshReaderMsh22ASCII.cpp  MeshReaderMsh22ASCII.h
src/method/: BoundaryCondition.cpp  BoundaryCondition.h  Component.cpp  Component.h  Config.cpp  Config.h  ConfigException.cpp  ConfigException.h  Data.cpp  Data.h  EosException.cpp  EosException.h  Flux.cpp  Flux.h  FluxHllc.cpp  FluxHllc.h  FluxLf.cpp  FluxLf.h  Material.cpp  Material.h  Method.cpp  Method.h  MethodException.cpp  MethodException.h  Prim.cpp  Prim.h  Reaction.cpp  Reaction.h  Region.cpp  Region.h  VtkWriter.cpp  VtkWriter.h
src/method/fem-dg-heat/: ConfigFemDgHeat.cpp  ConfigFemDgHeat.h  DataDgHeat.cpp  DataDgHeat.h  MethodFemDgHeat — копия.cpp  MethodFemDgHeat — копия.h  MethodFemDgHeat.cpp  MethodFemDgHeat.h  MethodFemDgHeatException.cpp  MethodFemDgHeatException.h
src/method/fvm/: ConfigFvm.cpp  ConfigFvm.h  DataFvm.cpp  DataFvm.h  FluxFvm.cpp  FluxFvm.h  FluxFvmHllc.cpp  FluxFvmHllc.h  FluxFvmLf.cpp  FluxFvmLf.h  MethodFvm.cpp  MethodFvm.h  MethodFvmException.cpp  MethodFvmException.h
src/method/global/: BoundaryCondition.cpp  BoundaryCondition.h  Component.cpp  Component.h  Config.cpp  Config.h  ConfigException.cpp  ConfigException.h  EosException.h  Material.cpp  Material.h  Method.h  MethodException.cpp  MethodException.h  Prim.cpp  Prim.h  Reaction.cpp  Reaction.h  Region.cpp  Region.h  VtkWriter.cpp  VtkWriter.h
src/method/lmchem/: ConfigFvmLMCh.cpp  ConfigFvmLMCh.h  DataFvmLMCh.cpp  DataFvmLMCh.h  DataFvmLowMachChem.cpp  DataFvmLowMachChem.h  FluxFvmLMCh.h  FluxFvmLMChLF.cpp  FluxFvmLMChLF.h  MethodFvmLMCh.cpp  MethodFvmLMCh.h  MethodFvmLMChException.h  MethodFvmLMCh_adv.cpp  MethodFvmLMCh_chem.cpp  MethodFvmLMCh_conv.cpp  MethodFvmLMCh_diff.cpp  MethodFvmLMCh_grad.cpp  MethodFvmLMCh_heat.cpp  MethodFvmLMCh_operators.cpp  MethodFvmLMCh_press.cpp  MethodFvmLMCh_visc.cpp  MethodFvmLowMachChem.cpp  MethodFvmLowMachChem.h  MethodFvmMLCh_conv.cpp
